新增清除本地缓存选项

--- a/b30gen.html
+++ b/b30gen.html
@@ -104,7 +104,7 @@
 			<output id="statistic_1X"></output>
 		</div>
 		<div id="avatarSelect">
-			<label style="background-color: bisque;">从下方选择你要替换的头像</label>
+			<label style="background-color: bisque;  width: 99%">从下方选择你要替换的头像</label>
 			<button onclick="showSelect()" style="cursor: pointer;">展开/收起头像选择</button>
 			<table id="sheet">
 				<tbody>
@@ -246,6 +246,8 @@
 
 				</tbody>
 			</table>
+			<label style="background-color: bisque; width: 99%">点击下方按钮清除本地缓存</label>
+			<button onclick="cln()" style="cursor: pointer;">清除本地缓存并刷新页面</button>
 		</div>
 	</div>
 </body>
