--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<input type="file" id="dbFileInput" style="display: none;"><br />
 		<div id="controller">
 			<button type="button" id="b30gen" onclick="window.open('b30gen.html')" >点击跳转b30生成页</button>
-			<button type="button" id="difgen" onclick="window.open('DividedByDifficulty.html')" >点击跳转定数查曲生成页</button><br />
+			<button type="button" id="difgen" onclick="window.open('DividedByDifficulty.html')" >点击跳转定数查曲生成页（还没做好</button><br />
 			<button type="button" id="uploadButton" >上传st3文件 </button>
 			<button type="button" id="download" onclick="exportCSV()" style="display: none;">下载csv文件</button><br><br />
 			<output  id="queryResult"></output>
