删除重复图片

--- a/b30gen.html
+++ b/b30gen.html
@@ -22,10 +22,10 @@
 
 				<div id="Avatar">
 					<div id="iconblur">
-						<img src="img/60_icon.png" />
+						<img src="img/avatar/60_icon.png" />
 					</div>
 					<div id="icon" onclick="switchController()">
-						<img src="img/60_icon.png" />
+						<img src="img/avatar/60_icon.png" />
 					</div>
 					<div id="stars">
 
