更新5.0新曲、搭档头像

--- a/b30gen.html
+++ b/b30gen.html
@@ -242,6 +242,8 @@
 					</tr>
 					<tr>
 						<td onclick="switchSelect('71')"><img class="selectImage" src="img/avatar/71_icon.png" /></td>
+						<td onclick="switchSelect('71l')"><img class="selectImage" src="img/avatar/71l_icon.png" /></td>
+						<td onclick="switchSelect('72')"><img class="selectImage" src="img/avatar/72_icon.png" /></td>
 					</tr>
 
 				</tbody>
