--- a/DividedByDifficulty.html
+++ b/DividedByDifficulty.html
@@ -8,6 +8,7 @@
 		<script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/DividedByDifficulty.css" />
+		<link rel="icon" href="favicon.ico" />
 	</head>
 	<body>
 		<div id="container">
