--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="js/sql-wasm.js"></script>
 		<script src="js/index.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
+		<link rel="icon" href="favicon.ico" />
 	</head>
 	<body>
 		<div id="bgimg">
