--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 		</div>
 		<h1 id="noticeButton" onclick="switchNotices()">注意事项</h1>
 		<ul id="notices">
-			<li>!点上面的“注意事项”可以把这一段文字收起</li>
-			<li>!若打开本网页或跳转b30生成页面时弹出下载提示框，请取消掉，<br />因为页面需要从服务器下载所需的脚本等文件，<br />而有时这些文件会被下载软件的浏览器插件监听并接管下载。<br />若嫌麻烦可以设置默认屏蔽该网页的下载请求</li>
+			<li style="color: firebrick;">!点上面的“注意事项”可以把这一段文字收起</li>
+			<li style="color: firebrick;">!若打开本网页或跳转b30生成页面时弹出下载提示框，请取消掉，<br />因为页面需要从服务器下载所需的脚本等文件，<br />而有时这些文件会被下载软件的浏览器插件监听并接管下载。<br />若嫌麻烦可以设置默认屏蔽该网页的下载请求</li>
+			<li style="color: firebrick; font-size: 30px;">!请确定完全看完下面的视频并了解了本页所有内容后再使用！!</li>
 			<li>1.点击 “上传st3文件” 上传你的st3文件，文件名可改可不改 </li>
-			<!-- <li><a href="#">查看原理以及获取st3数据库文件的方法</a></li> -->
+			<li><a href="https://www.bilibili.com/video/BV1kp4y1F7Jw" target="_blank">查看原理、食用方法以及获取st3数据库文件的方法</a></li>
 			<li>2.上传完之后如果不出意外会立马显示数据库内的全曲目游玩记录表格 </li><br />
 			<li>*若有字符显示“?”是因为我用了比较懒的方法进行数据库查询，字符集有点问题，<br />但是不影响会意以及后面的b30生成</li><br />
 			<li>3.点击 下载csv文件 可以把表格保存到本地 </li>
