--- a/b30gen.html
+++ b/b30gen.html
@@ -93,15 +93,15 @@
 		</div>
 		<div id="statistic">
 			<label id="statistic_Toat">在显示的数据中:</label><br />
-			<label>FR共有</label><br />
+			<label>FR共有</label>
 			<output id="statistic_FR"></output><br />
-			<label>PM共有</label><br />
+			<label>PM共有</label>
 			<output id="statistic_PM"></output><br />
-			<label>理论共有</label><br />
+			<label>理论共有</label>
 			<output id="statistic_TH"></output><br />
-			<label>1f/1l共有</label><br />
+			<label>1f/1l共有</label>
 			<output id="statistic_XN"></output><br />
-			<label>PM但1小p共有</label><br />
+			<label>PM但1小p共有</label>
 			<output id="statistic_1X"></output>
 		</div>
 		<div id="avatarSelect">
