--- a/b30gen.html
+++ b/b30gen.html
@@ -15,7 +15,10 @@
 
 <body>
 	<div id="container">
-		<img id="background" src="bgs/8.jpg" />
+		<div id="background">
+			<img id="bgImg" src="bgs/8.jpg" />
+		</div>
+		
 		<!--<img id="partner" src="img/kou.png" />-->
 		<h1 id="notice">若页面显示不完整，请刷新几次</h1>
 		<div id="PTTValue">
@@ -246,9 +249,12 @@
 						<td onclick="switchSelect('71l')"><img class="selectImage" src="img/avatar/71l_icon.png" /></td>
 						<td onclick="switchSelect('72')"><img class="selectImage" src="img/avatar/72_icon.png" /></td>
 					</tr>
-
 				</tbody>
 			</table>
+			
+			<label style="background-color: bisque; width: 99%">切换背景图片</label>
+			<button style="width: 150px;" onclick="switchBg(-1)">上一张</button>
+			<button style="width: 150px;" onclick="switchBg(1)">下一张</button><br />
 			<label style="background-color: bisque; width: 99%">点击下方按钮清除本地缓存</label>
 			<button onclick="cln()" style="cursor: pointer;">清除本地缓存并刷新页面</button>
 		</div>
