优化图片体积，提高加载速度

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div id="bgimg">
-			<img src="bgs/bg_light.jpg">
+			<img src="bgs/bg_light.webp">
 		</div>
 		<h1 id="noticeButton" onclick="switchNotices()">注意事项</h1>
 		<ul id="notices">
