--- a/b30gen.html
+++ b/b30gen.html
@@ -8,7 +8,7 @@
 	<script src="js/b30gen.js"></script>
 	<script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
-	<link href="https://fonts.googlefonts.cn/css?family=Exo:600&amp;subset=latin-ext" rel="stylesheet">
+	<!-- <link href="https://fonts.googlefonts.cn/css?family=Exo:600&amp;subset=latin-ext" rel="stylesheet"> -->
 	<link rel="stylesheet" type="text/css" href="css/b30gen.css" />
 	<link rel="icon" href="favicon.ico" />
 </head>
