--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 		<h1 id="noticeButton" onclick="switchNotices()">注意事项</h1>
 		<ul id="notices">
 			<li style="color: firebrick;">!点上面的“注意事项”可以把这一段文字收起</li>
-			<li style="color: firebrick;">!若打开本网页或跳转b30生成页面时弹出下载提示框，请取消掉，<br />因为页面需要从服务器下载所需的脚本等文件，<br />而有时这些文件会被下载软件的浏览器插件监听并接管下载。<br />若嫌麻烦可以设置默认屏蔽该网页的下载请求</li>
+			<li style="color: firebrick;">
+				!若打开本网页或跳转b30生成页面时弹出下载提示框，请取消掉，<br />因为页面需要从服务器下载所需的脚本等文件，<br />而有时这些文件会被下载软件的浏览器插件监听并接管下载。<br />若嫌麻烦可以设置默认屏蔽该网页的下载请求
+			</li>
 			<li style="color: firebrick; font-size: 30px;">!请确定完全看完下面的视频并了解了本页所有内容后再使用！!</li>
-			
+
 			<li><a href="https://www.bilibili.com/video/BV1kp4y1F7Jw" target="_blank">查看原理、食用方法以及获取st3数据库文件的方法</a></li>
-			<iframe id="bili" src="//player.bilibili.com/player.html?aid=958967055&bvid=BV1kp4y1F7Jw&cid=1281665008&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+			<iframe id="bili" src="//player.bilibili.com/player.html?aid=958967055&bvid=BV1kp4y1F7Jw&cid=1281665008&p=1"
+				scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 			<li>1.点击 “上传st3文件” 上传你的st3文件，文件名可改可不改 </li>
 			<li>2.上传完之后如果不出意外会立马显示数据库内的全曲目游玩记录表格 </li><br />
 			<li>*若有字符显示“?”是因为我用了比较懒的方法进行数据库查询，字符集有点问题，<br />但是不影响会意以及后面的b30生成</li><br />
@@ -37,15 +40,17 @@
 		</ul>
 		<input type="file" id="dbFileInput" style="display: none;"><br />
 		<div id="controller">
-			<button type="button" id="b30gen" onclick="window.open('b30gen.html')" >点击跳转b30生成页</button>
-			<button type="button" id="difgen" onclick="window.open('DividedByDifficulty.html')" >点击跳转定数查曲生成页（还没做好</button><br />
-			<button type="button" id="uploadButton" >上传st3文件 </button>
-			<button type="button" id="download" onclick="exportCSV()" style="display: none;">下载csv文件</button><br><br />
-			<output  id="queryResult"></output>
+			<button type="button" id="b30gen" onclick="window.open('b30gen.html')">点击跳转b30生成页</button>
+			<button type="button" id="difgen"
+				onclick="window.open('DividedByDifficulty.html')">点击跳转定数查曲生成页（还没做好</button><br /><br />
+			<button type="button" id="uploadButton">上传st3文件 </button>
+			<button type="button" id="download" onclick="exportCSV()" style="display: none;">下载csv文件</button>
+			<button type="button" id="sendToB30" onclick="sendToB30()" style="display: none;">以下表生成b30</button>
+			<output id="queryResult"></output>
 		</div>
 		<table id="queryTable">
 			<thead>
-				
+
 				<tr></tr>
 			</thead>
 			<tbody>
