--- a/b30gen.html
+++ b/b30gen.html
@@ -340,7 +340,8 @@
 				<label id="currentBgIndex" style="float: left; width: 170px; text-align: center; font-size: 40px; top: 8px; position: relative;">9/9</label>
 				<button style="width: 150px; position: relative; float: left;" onclick="switchBg(1)">下一张</button><br />
 				<label style="background-color: bisque; width: 99%">点击下方按钮清除本地缓存</label>
-				<button onclick="cln()" style="cursor: pointer;">清除本地缓存并刷新页面</button>
+				<button onclick="cln()" style="cursor: pointer;">清除本地缓存并刷新页面</button><br /><br />
+				<button style="cursor: pointer; transform: scale(-1, -1)" onclick="reverse()">反转了！</button>
 			</div>
 		</div>
 	</body>
