暂时屏蔽定数生图

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		<input type="file" id="dbFileInput" style="display: none;"><br />
 		<div id="controller">
 			<button type="button" id="b30gen" onclick="window.open('b30gen.html')">点击跳转b30生成页</button>
-			<button type="button" id="difgen"
-				onclick="window.open('DividedByDifficulty.html')">点击跳转定数查曲生成页（还没做好</button><br /><br />
+			<!-- <button type="button" id="difgen"
+				onclick="window.open('DividedByDifficulty.html')">点击跳转定数查曲生成页（还没做好</button> --><br /><br />
 			<button type="button" id="uploadButton">上传st3文件 </button>
 			<button type="button" id="download" onclick="exportCSV()" style="display: none;">下载csv文件</button>
 			<button type="button" id="sendToB30" onclick="sendToB30()" style="display: none;">以下表生成b30</button>
