--- a/DividedByDifficulty.html
+++ b/DividedByDifficulty.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<img id="background" src="bgs/8.jpg" />
+			<img id="background" src="bgs/8.webp" />
 			<!--<img id="partner" src="img/kou.png" />-->
 			<h1 id="notice">若页面显示不完整，请刷新几次</h1>
 			<div id="PTTValue">
@@ -20,10 +20,10 @@
 
 					<div id="Avatar">
 						<div id="iconblur">
-							<img src="img/60_icon.png" />
+							<img src="img/avatar/15_icon.png" />
 						</div>
 						<div id="icon" onclick="switchController()">
-							<img src="img/60_icon.png" />
+							<img src="img/avatar/15_icon.png" />
 						</div>
 						<div id="stars">
 
