--- a/b30gen.html
+++ b/b30gen.html
@@ -65,7 +65,7 @@
 				<label>在此修改要显示的👇</label><br />
 				<label>用户名</label><br />
 				<input id="nameInput" oninput="refreshUsername()" value="Hikari" /><br />
-				<label>好友码</label> <button id="hideUID" style="width: auto;height: auto;" onclick="hideUid()" value="1">隐藏</button><br />
+				<label>好友码</label> <button id="hideUID" style="width: auto;height: auto;background-color: cornflowerblue;" onclick="hideUid()" value="1">隐藏</button><br />
 				<input id="uidInput" maxlength="9" oninput="refreshUID()" value="100000001" /><br />
 				<label>潜力值</label><br />
 				<input id="pPTTInput" maxlength="5" oninput="recalculateR10()" value="6.16" />
