修改了分数表直接编辑功能

--- a/b30gen.html
+++ b/b30gen.html
@@ -87,10 +87,11 @@
 			</div>
 			<div id="files">
 				<input type="file" id="fileInput" style="display: none;">
-				<label>选择csv文件以上传数据👇</label>
-				<button id="uploadButton">点击选择csv文件</button><br /><br />
-				<button id="saveButton" style="font-style: italic;">保存当前分数页图片</button> <br /> <br />
+				<label>选择csv文件以上传数据👇</label><br />
+				<button id="uploadButton">点击选择csv文件</button><br />
+				<button id="saveButton" style="font-style: italic;">保存当前分数页图片</button> <br />
 				<button><a href="index.html">点击跳转csv生成页面</a></button><br />
+				<button onclick="editScore()"><a>修改当前分数表</a></button>
 			</div>
 			<div id="easyPTT">
 				<label style="cursor: pointer;" onclick="">计算单曲ptt 👍</label> <br />
