增加分级显示，修改divgen的高度判断

--- a/divgen.html
+++ b/divgen.html
@@ -49,7 +49,7 @@
 					</div>
 					<div id="statisticsDisplay"></div>
 					<div id="PTTDisplay"> </div>
-					<img class="spliter" src="img/divider.png" />
+					<div class="spliter" id="firstSpliter"/>
 				</div>
 			</div>
 
