更新模板.csv, 微调部分代码和样式

--- a/b30gen.html
+++ b/b30gen.html
@@ -16,7 +16,7 @@
 	<body>
 		<div id="mainCover">
 			<img id="loadingGif" src="img/loading.gif" /><br /><br /><br /><br /><br />
-			<h1 id="loadingNotice"> Generating... Please wait for a second... </h1>
+			<h1 id="loadingNotice"> Generating...<br /> Please wait for a second... </h1>
 		</div>
 		<div id="mainCapture">
 			<div id="container">
