--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 			<li>*水平有限，缝缝补补得到的这几个页面难免会有性能问题🙏</li><br />
 			<li>————RTE QQ: 2232194759</li><br />
 		</ul>
+		
+		<h2 style="position: relative; left: 50px;">当前数据库版本：5.1</h2>
+		<h2 style="position: relative; left: 50px;">更新于 2023/10/27</h2>
 		<input type="file" id="dbFileInput" style="display: none;"><br />
 		<div id="controller">
 			<button type="button" id="b30gen" onclick="window.open('b30gen.html')">点击跳转b30生成页</button>
 			<button type="button" id="difgen"
 				onclick="window.open('divgen.html')">点击跳转定数查曲生成页</button>
-			<button type="button" id="difgen">
+			<button type="button" id="dldbtn">
 				<a style="width: 100%; height: 100%; text-decoration: none; color: aliceblue;" 
 					download="模板.csv" href="sample/模板.csv" 
 					onclick="alert('请读完这条提示！\n 稍后下载的模板.csv内含有全部曲目的全部难度的分级条目，顺序是\n※游戏内全部歌曲的曲名序※\n尽量填写多于30条数据以保证B30计算正常。填写完成后请使用Excel或WPS表格的函数手动计算每首歌的单曲PTT（具体计算公式见Arcaea Wiki）\n 物量信息（p，f，l）可以不填，但是会影响B30图中理论值曲目的显示效果（缺少蓝色阴影，但是没有也不影响\n没有成绩的条目请手动删除，并最终把文件仍保存为csv格式。软件可能会提示丢失信息，请忽略！\n确认阅读完毕并理解之后，点击 确定')">下载模板.csv手动填入成绩</a>
