尝试在本地缓存更多信息。将曲绘、背景保存到localStorage中加快加载速度

--- a/b30gen.html
+++ b/b30gen.html
@@ -119,8 +119,8 @@
 				<label style="background-color: bisque;  width: 99%">从下方选择你要替换的头像</label>
 				<button onclick="showSelect()" style="cursor: pointer;">展开/收起头像选择</button>
 				<table id="sheet">
-					<tbody>
-						<tr>
+					<tbody id="avatarTable">
+						<!-- <tr>
 							<td onclick="switchSelect('0')"><img class="selectImage" src="img/avatar/0_icon.webp" />
 							</td>
 							<td onclick="switchSelect('0u')"><img class="selectImage" src="img/avatar/0u_icon.webp" />
@@ -349,7 +349,7 @@
 							</td>
 							<td onclick="switchSelect('1l')"><img class="selectImage" src="img/avatar/1l_icon.webp" />
 							</td>
-						</tr>
+						</tr> -->
 					</tbody>
 				</table>
 
