--- a/divgen.html
+++ b/divgen.html
@@ -71,14 +71,10 @@
 				<input id="uidInput" maxlength="9" oninput="refreshUID()" value="100000001" /><br />
 				<label>潜力值</label><br />
 				<input id="pPTTInput" maxlength="5" oninput="recalculateR10()" value="6.16" />
-				<label>以上数据均需手动修改（若R10不满，则MaxPTT与实际显示的个人潜力值会有所不同）</label>
+				<!-- <label>以上数据均需手动修改（若R10不满，则MaxPTT与实际显示的个人潜力值会有所不同）</label> -->
 			</div>
-			<!-- <div id="units">
-				<label>点击头像显示/隐藏该控件</label><br />
-				<label>显示曲目成绩数调节👇</label><br />
-				<label>数值过大会引起问题！</label>
-				<input id="displayAmount" type="number" value="10" />
-			</div> -->
+			<label style="background-color: bisque;  width: 99%">点击头像显示/隐藏该控件</label><br />
+			<label style="background-color: bisque;  width: 99%">不推荐生成太长的图，可能会崩🤔</label>
 			<div id="files">
 				<input type="file" id="fileInput" style="display: none;">
 				<label>选择csv文件以上传数据👇</label>
@@ -87,279 +83,30 @@
 				<button><a href="index.html">点击跳转csv生成页面</a></button><br />
 				<button><a href="b30gen.html">点击返回b30生成页面</a></button><br />
 			</div>
-			<!-- <div id="easyPTT">
-				<label style="cursor: pointer;" onclick="">计算单曲ptt 👍</label> <br />
-				<label>定数</label>
-				<input id="realDifficulty" maxlength="5" oninput="calculateSinglePTT()" /> <br />
-				<label>分数</label>
-				<input id="score" maxlength="8" oninput="calculateSinglePTT()" /> <br />
-				<label>单曲ptt</label>
-				<output id="singleptt">👉[ ]</output>
-			</div>
-			<div id="statistic">
-				<label id="statistic_Toat">在显示的数据中:</label><br />
-				<label>FR共有</label><br />
-				<output id="statistic_FR"></output><br />
-				<label>PM共有</label><br />
-				<output id="statistic_PM"></output><br />
-				<label>理论共有</label><br />
-				<output id="statistic_TH"></output><br />
-				<label>1f/1l共有</label><br />
-				<output id="statistic_XN"></output><br />
-				<label>PM但1小p共有</label><br />
-				<output id="statistic_1X"></output>
-			</div> -->
-			<label style="background-color: bisque;  width: 99%">点击头像显示/隐藏该控件</label><br />
-			<label style="background-color: bisque;  width: 99%">不是很推荐生成太长的图，有可能网页或者你的浏览器会崩掉🤔</label>
-
-			<button onclick="cln()" style="cursor: pointer;">清除本地缓存并刷新页面</button><br /><br />
-
-			<div id="adjustDifficulty">
-				<label>调整要显示指定曲目的定数范围：</label><br />
-				<label style="width: 100px;">下限</label> <button id="ftrOnly" style="width: auto;height: auto;background-color: cornflowerblue;" onclick="switchFTR()">只要FTR和BYD</button><br />
-				<input id="lowDifficulty" maxlength="4" value="10.0" oninput="setDifficulty()" />
-				<label>上限</label><br />
-				<input id="highDifficulty" maxlength="4" value="10.6" oninput="setDifficulty()">
-			</div>
-
 			<div id="avatarSelect">
 				<label style="background-color: bisque;  width: 99%">从下方选择你要替换的头像</label>
 				<button onclick="showSelect()" style="cursor: pointer;">展开/收起头像选择</button>
 				<table id="sheet">
-					<tbody>
-						<tr>
-							<td onclick="switchSelect('0')"><img class="selectImage" src="img/avatar/0_icon.webp" />
-							</td>
-							<td onclick="switchSelect('0u')"><img class="selectImage" src="img/avatar/0u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('1')"><img class="selectImage" src="img/avatar/1_icon.webp" />
-							</td>
-							<td onclick="switchSelect('1u')"><img class="selectImage" src="img/avatar/1u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('2')"><img class="selectImage" src="img/avatar/2_icon.webp" />
-							</td>
-							<td onclick="switchSelect('2u')"><img class="selectImage" src="img/avatar/2u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('3')"><img class="selectImage" src="img/avatar/3_icon.webp" />
-							</td>
-							<td onclick="switchSelect('99')"><img class="selectImage" src="img/avatar/99_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('4')"><img class="selectImage" src="img/avatar/4_icon.webp" />
-							</td>
-							<td onclick="switchSelect('4u')"><img class="selectImage" src="img/avatar/4u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('5')"><img class="selectImage" src="img/avatar/5_icon.webp" />
-							</td>
-							<td onclick="switchSelect('6')"><img class="selectImage" src="img/avatar/6_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('7')"><img class="selectImage" src="img/avatar/7_icon.webp" />
-							</td>
-							<td onclick="switchSelect('8')"><img class="selectImage" src="img/avatar/8_icon.webp" />
-							</td>
-							<td onclick="switchSelect('9')"><img class="selectImage" src="img/avatar/9_icon.webp" />
-							</td>
-							<td onclick="switchSelect('10')"><img class="selectImage" src="img/avatar/10_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('10u')"><img class="selectImage" src="img/avatar/10u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('11u')"><img class="selectImage" src="img/avatar/11u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('12')"><img class="selectImage" src="img/avatar/12_icon.webp" />
-							</td>
-							<td onclick="switchSelect('12u')"><img class="selectImage" src="img/avatar/12u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('13')"><img class="selectImage" src="img/avatar/13_icon.webp" />
-							</td>
-							<td onclick="switchSelect('13u')"><img class="selectImage" src="img/avatar/13u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('14')"><img class="selectImage" src="img/avatar/14_icon.webp" />
-							</td>
-							<td onclick="switchSelect('15')"><img class="selectImage" src="img/avatar/15_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('16')"><img class="selectImage" src="img/avatar/16_icon.webp" />
-							</td>
-							<td onclick="switchSelect('17')"><img class="selectImage" src="img/avatar/17_icon.webp" />
-							</td>
-							<td onclick="switchSelect('18')"><img class="selectImage" src="img/avatar/18_icon.webp" />
-							</td>
-							<td onclick="switchSelect('19')"><img class="selectImage" src="img/avatar/19_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('19u')"><img class="selectImage" src="img/avatar/19u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('20')"><img class="selectImage" src="img/avatar/20_icon.webp" />
-							</td>
-							<td onclick="switchSelect('21')"><img class="selectImage" src="img/avatar/21_icon.webp" />
-							</td>
-							<td onclick="switchSelect('21u')"><img class="selectImage" src="img/avatar/21u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('22')"><img class="selectImage" src="img/avatar/22_icon.webp" />
-							</td>
-							<td onclick="switchSelect('23')"><img class="selectImage" src="img/avatar/23_icon.webp" />
-							</td>
-							<td onclick="switchSelect('24')"><img class="selectImage" src="img/avatar/24_icon.webp" />
-							</td>
-							<td onclick="switchSelect('25')"><img class="selectImage" src="img/avatar/25_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('26')"><img class="selectImage" src="img/avatar/26_icon.webp" />
-							</td>
-							<td onclick="switchSelect('26u')"><img class="selectImage" src="img/avatar/26u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('27')"><img class="selectImage" src="img/avatar/27_icon.webp" />
-							</td>
-							<td onclick="switchSelect('27u')"><img class="selectImage" src="img/avatar/27u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('28')"><img class="selectImage" src="img/avatar/28_icon.webp" />
-							</td>
-							<td onclick="switchSelect('28u')"><img class="selectImage" src="img/avatar/28u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('29')"><img class="selectImage" src="img/avatar/29_icon.webp" />
-							</td>
-							<td onclick="switchSelect('29u')"><img class="selectImage" src="img/avatar/29u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('30')"><img class="selectImage" src="img/avatar/30_icon.webp" />
-							</td>
-							<td onclick="switchSelect('31')"><img class="selectImage" src="img/avatar/31_icon.webp" />
-							</td>
-							<td onclick="switchSelect('32')"><img class="selectImage" src="img/avatar/32_icon.webp" />
-							</td>
-							<td onclick="switchSelect('33')"><img class="selectImage" src="img/avatar/33_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('34')"><img class="selectImage" src="img/avatar/34_icon.webp" />
-							</td>
-							<td onclick="switchSelect('35')"><img class="selectImage" src="img/avatar/35_icon.webp" />
-							</td>
-							<td onclick="switchSelect('36')"><img class="selectImage" src="img/avatar/36_icon.webp" />
-							</td>
-							<td onclick="switchSelect('36u')"><img class="selectImage" src="img/avatar/36u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('37')"><img class="selectImage" src="img/avatar/37_icon.webp" />
-							</td>
-							<td onclick="switchSelect('38')"><img class="selectImage" src="img/avatar/38_icon.webp" />
-							</td>
-							<td onclick="switchSelect('39')"><img class="selectImage" src="img/avatar/39_icon.webp" />
-							</td>
-							<td onclick="switchSelect('40')"><img class="selectImage" src="img/avatar/40_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('41')"><img class="selectImage" src="img/avatar/41_icon.webp" />
-							</td>
-							<td onclick="switchSelect('42')"><img class="selectImage" src="img/avatar/42_icon.webp" />
-							</td>
-							<td onclick="switchSelect('42u')"><img class="selectImage" src="img/avatar/42u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('43')"><img class="selectImage" src="img/avatar/43_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('43u')"><img class="selectImage" src="img/avatar/43u_icon.webp" />
-							</td>
-							<td onclick="switchSelect('44')"><img class="selectImage" src="img/avatar/44_icon.webp" />
-							</td>
-							<td onclick="switchSelect('45')"><img class="selectImage" src="img/avatar/45_icon.webp" />
-							</td>
-							<td onclick="switchSelect('46')"><img class="selectImage" src="img/avatar/46_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('47')"><img class="selectImage" src="img/avatar/47_icon.webp" />
-							</td>
-							<td onclick="switchSelect('48')"><img class="selectImage" src="img/avatar/48_icon.webp" />
-							</td>
-							<td onclick="switchSelect('49')"><img class="selectImage" src="img/avatar/49_icon.webp" />
-							</td>
-							<td onclick="switchSelect('50')"><img class="selectImage" src="img/avatar/50_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('51')"><img class="selectImage" src="img/avatar/51_icon.webp" />
-							</td>
-							<td onclick="switchSelect('52')"><img class="selectImage" src="img/avatar/52_icon.webp" />
-							</td>
-							<td onclick="switchSelect('53')"><img class="selectImage" src="img/avatar/53_icon.webp" />
-							</td>
-							<td onclick="switchSelect('54')"><img class="selectImage" src="img/avatar/54_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('55')"><img class="selectImage" src="img/avatar/55_icon.webp" />
-							</td>
-							<td onclick="switchSelect('56')"><img class="selectImage" src="img/avatar/56_icon.webp" />
-							</td>
-							<td onclick="switchSelect('57')"><img class="selectImage" src="img/avatar/57_icon.webp" />
-							</td>
-							<td onclick="switchSelect('58')"><img class="selectImage" src="img/avatar/58_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('59')"><img class="selectImage" src="img/avatar/59_icon.webp" />
-							</td>
-							<td onclick="switchSelect('60')"><img class="selectImage" src="img/avatar/60_icon.webp" />
-							</td>
-							<td onclick="switchSelect('62')"><img class="selectImage" src="img/avatar/62_icon.webp" />
-							</td>
-							<td onclick="switchSelect('63')"><img class="selectImage" src="img/avatar/63_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('64')"><img class="selectImage" src="img/avatar/64_icon.webp" />
-							</td>
-							<td onclick="switchSelect('65')"><img class="selectImage" src="img/avatar/65_icon.webp" />
-							</td>
-							<td onclick="switchSelect('66')"><img class="selectImage" src="img/avatar/66_icon.webp" />
-							</td>
-							<td onclick="switchSelect('66u')"><img class="selectImage" src="img/avatar/66u_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('67')"><img class="selectImage" src="img/avatar/67_icon.webp" />
-							</td>
-							<td onclick="switchSelect('68')"><img class="selectImage" src="img/avatar/68_icon.webp" />
-							</td>
-							<td onclick="switchSelect('69')"><img class="selectImage" src="img/avatar/69_icon.webp" />
-							</td>
-							<td onclick="switchSelect('70')"><img class="selectImage" src="img/avatar/70_icon.webp" />
-							</td>
-						</tr>
-						<tr>
-							<td onclick="switchSelect('71')"><img class="selectImage" src="img/avatar/71_icon.webp" />
-							</td>
-							<td onclick="switchSelect('71l')"><img class="selectImage" src="img/avatar/71l_icon.webp" />
-							</td>
-							<td onclick="switchSelect('72')"><img class="selectImage" src="img/avatar/72_icon.webp" />
-							</td>
-							<td onclick="switchSelect('1l')"><img class="selectImage" src="img/avatar/1l_icon.webp" />
-							</td>
-						</tr>
+					<tbody id="avatarTable">
+						
 					</tbody>
 				</table>
 			</div>
+			
+
+			<!-- <button onclick="cln()" style="cursor: pointer;">清除本地缓存并刷新页面</button><br /><br /> -->
+
+			<div id="adjustDifficulty">
+				<label>调整要显示指定曲目的定数范围：</label><br />
+				<label>下限<button id="ftrOnly" style="width: auto;height: auto;background-color: cornflowerblue; float: right;" onclick="switchFTR()">只要FTR和BYD</button></label> 
+				<br />
+				<input id="lowDifficulty" maxlength="4" value="10.0" oninput="setDifficulty()" /><br />
+				<label>上限 <button id="pmOnly" style="width: auto;height: auto;background-color: cornflowerblue; float: right;" onclick="switchPM()">🐉只要PM🐉</button></label>
+				<br />
+				<input id="highDifficulty" maxlength="4" value="10.6" oninput="setDifficulty()">
+			</div>
+
+			
 			<label style="background-color: bisque; width: 99%">切换背景图片</label>
 			<button style="width: 150px; float: left;" onclick="switchBg(-1)">上一张</button>
 			<label id="currentBgIndex"
