--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 			</div>
 		</div>
-		<div id="chartContainer" style="position: relative; width:70%; margin: 0 auto; height: 600px;">
+		<div id="chartContainer" >
 			<canvas id="chart"></canvas>
 		</div>
 		
