--- a/b30gen.html
+++ b/b30gen.html
@@ -81,13 +81,14 @@
 			</div>
 			
 			<div id="units">
-				<label>点击头像显示/隐藏该控件</label><br />
+				
 				<label>显示曲目成绩数调节👇</label><br />
 				<input id="displayAmount" oninput="changeDisplayAmount()" type="number" value="39" /><br />
 				<label>数值过大保存图片可能失败或导致图片不完整，<br />且图片可能过大无法正常发送</label>
 			</div>
-			
 			<div id="files">
+				<label style="background-color: burlywood; width: 100%; text-align: center; height: 40px; color: darkred;">↖点击头像显示/隐藏该控件</label>
+				
 				<input type="file" id="fileInput" style="display: none;">
 				<label>选择csv文件以上传数据👇</label><br />
 				<button id="uploadButton">点击选择csv文件</button><br />
