--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<h1 id="noticeButton" onclick="switchNotices()">注意事项</h1>
 			<button id="constantSheet">查看定数表</button>
 			<div id="version">
-				<h2>当前数据库版本：5.1</h2>
-				<h2>更新于 2023/10/27</h2>
+				<h2>当前数据库版本：5.1(待更新)</h2>
+				<h2>更新于 2023/10/27(待更新)</h2>
 			</div>
 			
 		</div>
