--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div id="version">
 				<h2>当前数据库版本：5.2</h2>
 				<h2>更新于 2023/11/30</h2>
-				<h2>曲绘文件版本：5.1(待更新)</h2>
+				<h2>曲绘文件版本：5.2</h2>
 			</div>
 			
 		</div>
