--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 			<h1 id="noticeButton" onclick="switchNotices()">注意事项</h1>
 			<button id="constantSheet">查看定数表</button>
 			<div id="version">
-				<h2>当前数据库版本：5.2</h2>
-				<h2>更新于 2023/11/30</h2>
-				<h2>曲绘文件版本：5.2</h2>
+				<h2>更新于 2023/12/21</h2>
+				<h2>当前数据库版本：5.2.2</h2>
+				<h2>曲绘文件版本：5.2.2</h2>
+				<h2>当前模板表版本：5.2.2</h2>
 			</div>
 			
 		</div>
