测试功能页

--- a/b30gen.html
+++ b/b30gen.html
@@ -84,7 +84,8 @@
 				
 				<label>显示曲目成绩数调节👇</label><br />
 				<input id="displayAmount" oninput="changeDisplayAmount()" type="number" value="39" /><br />
-				<label>数值过大保存图片可能失败或导致图片不完整，<br />且图片可能过大无法正常发送</label>
+				<label>数值过大保存图片可能失败或导致图片不完整，<br />且图片可能过大无法正常发送</label><br /><br />
+				<button class="colorbtn" id="p30Button"><a href="p30gen.html">看看P30?</a></button>
 			</div>
 			<div id="files">
 				<label style="background-color: burlywood; width: 100%; text-align: center; height: 40px; color: darkred;">↖点击头像显示/隐藏该控件</label>
@@ -92,7 +93,7 @@
 				<input type="file" id="fileInput" style="display: none;">
 				<label>选择csv文件以上传数据👇</label><br />
 				<button id="uploadButton">点击选择csv文件</button><br />
-				<button id="saveButton" style="font-style: italic;">保存当前分数页图片</button> <br />
+				<button class="colorbtn" id="saveButton" style="font-style: italic;">保存当前分数页图片</button> <br />
 				<button><a href="index.html">点击跳转csv生成页面</a></button><br />
 				<button onclick="editScore()"><a>修改当前分数表</a></button>
 			</div>
