--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<h1 id="noticeButton" onclick="switchNotices()">注意事项</h1>
 			<button id="constantSheet">查看定数表</button>
 			<div id="version">
-				<h2>待更新 2024/01/25</h2>
-				<h2>当前数据库版本：5.3.0(未完成)</h2>
+				<h2>更新于 2024/01/25</h2>
+				<h2>当前数据库版本：5.3.0</h2>
 				<h2>曲绘文件版本：5.3.0</h2>
 				<h2>当前模板表版本：5.2.6</h2>
 			</div>
