暂时不显示分布图表

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
 			</div>
 		</div>
-		<div id="chartContainer">
-			<canvas id="chart"></canvas>
-		</div>
+		<!-- <div id="chartContainer" hidden="hidden">
+			<canvas id="chart" hidden="hidden"></canvas>
+		</div> -->
 		<div id="briefStatistic">
 			<a id="best30"></a>
 			<a id="top30"></a>
