--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<button id="constantSheet">查看定数表</button>
 			<div id="version">
 				<h2>更新于 2024/03/26</h2>
-				<h2>当前数据库版本：5.5.0</h2>
-				<h2>曲绘文件版本：5.5.0</h2>
-				<h2>当前模板表版本：5.2.6</h2>
+				<h2>当前数据库版本：v5.5</h2>
+				<h2>曲绘文件版本：v5.5</h2>
+				<h2>当前模板表版本：v5.5</h2>
 			</div>
 			
 		</div>
