--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<h2>当前数据库版本：v5.5</h2>
 				<h2>曲绘文件版本：v5.5</h2>
 				<h2>当前模板表版本：v5.5</h2>
+				<h2>新页面绝赞开(gu)发(gu)中(gu)</h2>
 			</div>
 			
 		</div>
