修复无法获取不同难度差分曲名的bug

--- a/b30gen.html
+++ b/b30gen.html
@@ -27,7 +27,7 @@
 		<div id="mainCapture">
 			<div id="container">
 				<div id="background">
-					<img id="background-image" src="bgs/s9.png" />
+					<img id="background-image" src="bgs/s9.webp" />
 				</div>
 
 				<!--<img id="partner" src="img/kou.webp" />-->
