微调样式,去除页面右下角二维码

--- a/b30gen.html
+++ b/b30gen.html
@@ -100,8 +100,9 @@
 			</div>
 
 			<div id="copyright">
-				Generated at http://SmartRTE.github.io @ <span>2024/xx/xx</span>
-				<img id="qrcode" src="img/QRCODE-githubio.png" />
+				<span>Generated at http://SmartRTE.github.io @ </span>
+				<span>2024/xx/xx</span>
+				<!-- <img id="qrcode" src="img/QRCODE-githubio.png" /> -->
 			</div>
 		</div>
 
