--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 						<button class="func-btn" style="left: 0; float: none;">点击下载手填表</button><br />
 						<label>更新于：<span>2024/04/21</span></label>
 					</div>
+					<a href="SmartRTE.gitee.io" target="_blank"><h1>如果加载太慢可以尝试gitee page(点击这里)</h1></a>
 					<div id="help">
 						<h1>看这里！</h1>
 						<ul>
