--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 						<label>当前曲目数据库版本：<span>5.6.0</span></label><br />
 						<label>当前曲绘文件库版本：<span>5.6.0</span></label><br />
 						<label>当前手填表文件版本：<span>5.6.0</span></label><br />
-						<button class="func-btn" style="left: 0; float: none;">点击下载手填表</button><br />
+						<a href="sample/模板.csv" style="text-decoration: none;"><button class="func-btn" style="left: 0; float: none;">点击下载手填分数表</button></button></a><br />
+						<h5>!手填表只填写分数即可，单曲潜力值会自动计算!</h2><br>
 						<label>更新于：<span>2024/04/26</span></label>
 					</div>
-					<a href="https://smartrte.gitee.io/" target="_blank"><h1>如果加载太慢可以尝试gitee page(点击这里)</h1></a>
+					<!-- <a href="https://smartrte.gitee.io/" target="_blank"><h1>如果加载太慢可以尝试gitee page(点击这里)</h1></a> -->
 					<div id="help">
 						<h1>看这里！</h1>
 						<ul>
