增加一点点统计功能

--- a/completion.html
+++ b/completion.html
@@ -77,6 +77,8 @@
 
 			<!-- 显示 b30 数据 主体在js内 -->
 			<div id="b30-data">
+
+
 				<!-- 样式模板 -->
 				<!-- <div class="song-result-unit future">
 					<div class="song-illustration-container">
@@ -170,8 +172,9 @@
 				</div>
 				<div class="setting-row">
 					<div class="setting-container">
-						<div id="no-record-hidden" ></div>
-						<button class="setting-button" onclick="displayNoRecord()" id="no-record-button">隐藏没有记录的成绩</button>
+						<div id="no-record-hidden"></div>
+						<button class="setting-button" onclick="displayNoRecord()"
+							id="no-record-button">隐藏没有记录的成绩</button>
 					</div>
 				</div>
 				<div class="setting-row">
@@ -260,7 +263,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="setting-row">
 					<div class="setting-container">
 						<button id="delete-local-storage" onclick="deleteLocalStorage()">⚠清空本地缓存⚠</button>
@@ -328,8 +331,7 @@
 			<div id="ai-chan-dialog-close" onclick="displayWindow('ai-chan-dialog')">×</div>
 			<div id="ai-chan-dialog-main">
 				<div id="ai-chan-dialog-title">
-					<button id="ai-chan-roll" class="setting-button"
-						onclick="aiChanRoll()">再推荐一首给我吧！</button>
+					<button id="ai-chan-roll" class="setting-button" onclick="aiChanRoll()">再推荐一首给我吧！</button>
 				</div>
 				<div id="ai-chan-content">(=・ω・=)
 				</div>
