--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 				</div>
 				<div id="disp-container">
 					<br />
-					<label>共有 <span id="result-quantity">0</span> 条结果</label><br />
+					<label>共有 <span id="result-quantity">0</span> 条结果</label>
+					<button id="show-statistics-btn" onclick="showStatistics()">查看统计</button><br />
 					<label for="disp-ptt">当前ptt为</label>
 					<input id="disp-ptt" type="text" oninput="calculateR10()" />
 					<label for="disp-ptt">(点击修改)</label><br />
