--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
 			<div id="result-area">
 				<div id="notice">
 					<div id="version">
-						<label>当前曲目数据库版本：<span>5.9.0</span></label><br />
-						<label>当前曲绘文件库版本：<span>5.9.0</span></label><br />
+						<label>当前曲目数据库版本：<span>5.10.0</span></label><br />
+						<label>当前曲绘文件库版本：<span>5.10.0</span></label><br />
 						<label>当前手填表文件版本：<span>5.6.0</span></label><br />
 						<a href="sample/模板.csv" style="text-decoration: none;"><button class="func-btn" style="left: 0; float: none;">点击下载手填分数表</button></a><br />
 						<h3>!手填表只填写分数即可，单曲潜力值会自动计算!</h3><br>
-						<label>更新于：<span>2024/07/02</span></label>
-						<h3>由于个人原因，手填表更新将推迟，非常抱歉！</h3>
+						<label>更新于：<span>2024/08/29</span></label>
+						<h3>由于个人原因，手填表更新将推迟，非常抱歉！</h3><br>
+						<!-- <img id="sticker"/> -->
+						<div id="sticker"></div>
 					</div>
 					<!-- <a href="https://smartrte.gitee.io/" target="_blank"><h1>如果加载太慢可以尝试gitee page(点击这里)</h1></a> -->
 					<div id="help">
