把没用的得分率改成有用的失分数

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								<td class="t-far">far</td>
 								<td class="t-lost">lost</td>
 								<td class="t-constant">定数</td>
-								<td class="t-play-rating">单曲潜力值</td>
+								<td class="t-play-rating">单曲潜力值&失分</td>
 							</tr>
 
 						</thead>
@@ -185,7 +185,8 @@
 							<option value="score">分数</option>
 							<option value="criticalRate">大P率</option>
 							<option value="normalPerfect">小p数</option>
-							<option value="percentage">吃分率</option>
+							<!-- <option value="percentage">吃分率</option> -->
+							<option value="loseScore">失分数</option>
 						</select>
 						<label for="sort-order" class="filter-label">,</label>
 						<select id="sort-order" class="filter-select">
