--- a/fakeResult.html
+++ b/fakeResult.html
@@ -5,8 +5,8 @@
 		<title>自定义成绩图</title>
 		<script src="js/jquery-3.6.1.min.js"></script>
 		<link rel="stylesheet" href="css/fakeResult.css" type="text/css" />
-		<!-- <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script> -->
+		<script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
 		<script src="js/fakeResult.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -73,10 +73,10 @@
 					<span id="maxrecall">1065</span>
 				</div>
 				<img id="illustration" src="illustration/invertedworld.jpg" />
+				<img id="hp-base" src="img/hpBar/hp_base.png" />
 				<img id="hp-bar" src="img/hpBar/hp_bar_clear.png" />
 				<img id="hp-bar-grid" src="img/hpBar/hp_grid.png" />
-				<img id="hp-bar-top" src="img/hpbar/hp_top.png" />
-				<img id="hp-base" src="img/hpBar/hp_base.png" />
+				<!-- <img id="hp-bar-top" src="img/hpbar/hp_top.png" /> -->
 				<span id="hp-value">100</span>
 				<div id="score-panel">
 					<img id="score-panel-background" src="img/layout/res_scoresection_high.png" />
@@ -230,7 +230,7 @@
 						<button id="switch-addition" onclick="switchDisplay('.item-count-addition')">显示/隐藏小P和far</button>
 					</div>
 					<div class="setting-row">
-						<button id="confirm" onclick="applySettings(getSettingValues())">确认修改</button>
+						<button id="confirm" onclick="applySettings(getSettingValues())" style="margin-left: 5rem;">确认修改</button>
 					</div>
 					<div class="setting-row">
 						<label style="margin-right: 6rem;">手动调整搭档位置：</label>
@@ -238,6 +238,9 @@
 						<button onclick="adjustCharacterPosition(2)" style="width: 5rem; margin: 0 10px;">↑</button>
 						<button onclick="adjustCharacterPosition(1)" style="width: 5rem; margin: 0 10px;">→</button>
 						<button onclick="adjustCharacterPosition(3)" style="width: 5rem; margin: 0 10px;">↓</button>
+					</div>
+					<div class="setting-row">
+						<button id="generate" onclick="saveAsImage('main-capture')" style="margin-left: 5rem;">保存为图片</button>
 					</div>
 				</div>
 				
